Allow reflection conversion to be ArooaValues.